<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:scaleType="center"
                android:src="@drawable/ic_launcher_foreground"
                app:shapeAppearance="@style/MyCustomAvatar"
                app:strokeColor="?dividerColor"
                app:strokeWidth="1dp"
                app:tint="@color/darkGray" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?textAppearanceBody1"
                tools:text="کاربر مهمان" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@drawable/shape_divider"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:showDividers="middle|end|beginning">

                <TextView
                    android:id="@+id/tv_favorites_list"
                    style="@style/MyCustomProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_list"
                    app:drawableStartCompat="@drawable/ic_favorites_20dp" />

                <TextView
                    android:id="@+id/tv_order_history"
                    style="@style/MyCustomProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_history"
                    app:drawableStartCompat="@drawable/ic_order_history" />

                <TextView
                    android:id="@+id/tv_login_or_logout"
                    style="@style/MyCustomProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:drawableStartCompat="@drawable/ic_login"
                    tools:text="@string/login_title" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>